--- a/core/components/settings/lang/en.json
+++ b/core/components/settings/lang/en.json
@@ -1,6 +1,6 @@
 {
     "about": "About",
-    "appname": "Learn Moodle {{version}}",
+    "appname": "CAAS Student Portal {{version}}",
     "appready": "App ready",
     "cacheexpirationtime": "Cache expiration time (miliseconds)",
     "cordovadevicemodel": "Cordova Device model",
